kubernetes/profileappdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels: 
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profileapp
  template:
    metadata:
      labels:
        app: profileapp
    spec:
      containers:
      - name: profileapp
        image: vprofile/vprofileapp
        ports:
        - name: profileapp-port
          containerPort: 8080
