kubernetes/rmq.dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilemq
  labels:
    app: profilemq
spec:
  selector:
    matchLabels:
      app: profilemq
  replicas: 1
  template:
    metadata:
      labels:
        app: profilemq
    spec:
      containers:
      - name: profilemq
        image: rabbitmq
        ports:
        - name: profilemq-port
          containerPort: 15672
