kubernetes/db-CIP.yaml
apiVersion: v1 
kind: Service
metadata:
#service name is from the application.properties file
  name: profiledb
spec:
  ports:
#Accept request on port 3306 and forward on port 3306
    - port: 3306
      targetPort: profiledb-port
      protocol: TCP

  selector:
    app: profiledb

  type: ClusterIP
